# App-TFG-Eduardo-Rueda

./: .gitignore  README.md
ai-agent/: .env.example  pyproject.toml
ai-agent/mcp/: memory_game_mcp.py
ai-agent/src/ai_agent/: __main__.py  config.py  main.py  model_manager.py  orchestrator.py  schemas.py
ai-agent/src/ai_agent/agent_loop/: agent_generic.py  agent_pydantic.py  memory_game_agent.py
ai-agent/src/ai_agent/audio_transcription/: audio_transcriber_faster_whisper.py  audio_transcriber_generic.py
ai-agent/src/ai_agent/config/: llama_cpp_model.py  llm_config.py
ai-agent/src/ai_agent/input/: input_generic.py  input_terminal.py  input_voice.py
ai-agent/src/ai_agent/mcp/: memory_game_mcp.py
ai-agent/src/ai_agent/output/: output_generic.py  output_terminal.py  output_tts.py
ai-agent/src/ai_agent/text_to_speech/: audio_speaker_generic.py  audio_speaker_piper.py
ai-agent/src/ai_agent/voice_detection/: audio_detector_generic.py  audio_detector_webrtcvad.py
ai-agent/src/text_to_speech/: audio_speaker_piper.py
ai-agent/src/voice_detection/: audio_detector_generic.py
ai-agent/tests/: test_audio_parsing.py  test_piper_speaker_smoke.py
ai-agent/text_to_speech/: audio_speaker_generic.py
benchmarks/: _benchmark_worker.py  ai-models_benchmark_llamacpp.ipynb  ai-models_benchmark_llamacpp_subprocess.ipynb  audio_transcription_benchmark.ipynb  pyproject.toml
benchmarks/data/: audio_contents.txt
benchmarks/raspberry_py_benchmark_outputs/audio_transcription/: audio_transcription_benchmark.html
benchmarks/raspberry_py_benchmark_outputs/slm_benchmark/: ai-models_benchmark_llamacpp.html  system_info.txt
benchmarks/windows_benchmark_outputs/audio_transcription/: audio_transcription_benchmark.html
benchmarks/windows_benchmark_outputs/slm_benchmark/: system_info.txt
benchmarks/windows_benchmark_outputs/slm_benchmark_cpu/: ai-models_benchmark_llamacpp.html
web/memory-game/: package-lock.json  package.json
web/memory-game/apps/backend/: package.json
web/memory-game/apps/backend/src/: main.ts
web/memory-game/apps/backend/src/game/: game.controller.ts  game.gateway.ts  game.module.ts  game.service.ts  game.types.ts
web/memory-game/apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
web/memory-game/apps/frontend/src/components/: GameBoard.module.css  GameBoard.tsx  MemoryCard.module.css  MemoryCard.tsx  SocketProvider.tsx
web/memory-game/apps/frontend/src/hooks/: useGameSocket.ts
web/memory-game/apps/frontend/src/types/: game.ts
