[project]
name = "benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "aiohttp>=3.14.1",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "kokoro-onnx>=0.5.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "piper-tts>=1.4.2",
    "pydantic-ai-slim[openai]>=1.103.0",
    "scipy>=1.17.1",
    "soundfile>=0.14.0",
    "suno-bark",
    "tabulate>=0.10.0",
    "transformers>=4.57.3",
    "torch==2.6.0+cu126",
    "torchvision==0.21.0+cu126",
    "torchaudio==2.6.0+cu126",
    "jupyter>=1.1.1",
    "faster-whisper>=1.2.1",
    "openai-whisper>=20250625",
    "speechrecognition>=3.16.1",
    "vosk>=0.3.45",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "pydub>=0.25.1",
    "seaborn>=0.13.2",
    "requests>=2.34.2",
    "llama-cpp-python>=0.3.29",
    "pydantic>=2.13.4",
    "coqui-tts>=0.27.5",
    "qwen-tts>=0.1.1",
]

[tool.uv.sources]

torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
suno-bark = { git = "https://github.com/suno-ai/bark.git" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
